<resources>
    <string name="app_name">FotoShare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_comment">Souhaitez-vous vraiment supprimer votre commmentaire ?</string>
    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="delete">Supprimé !</string>
    <string name="no_action">Vous ne pouvez effectuer aucune action</string>
    <string name="see">Voir</string>
    <string name="the">les</string>
    <string name="comment">commentaire</string>
    <string name="comments">commentaires</string>
    <string name="no_comments">Aucun commentaire sur cette publication</string>
    <string name="liked_post">a aimé votre post</string>
    <string name="liked_post_notif">"Vous venez d\'aimé un post"</string>
    <string name="edit_post">Modifier le post</string>
    <string name="edit">Modifier</string>
    <string name="cancel">Annuler</string>
    <string name="view_story">Voir la story</string>
    <string name="add_story">Ajouter une story</string>
    <string name="my_story">Ma story</string>
    <string name="story">Story</string>
    <string name="follow">Suivre</string>
    <string name="subscriber">Abonné(e)</string>
    <string name="follow_notif">Vous venez de suivre une personne sur FotoShare</string>
    <string name="unfollow_notif">"Vous venez de vous désabonnez d\'une personne"</string>
    <string name="follow_notif_fragment">a commencé à vous suivre</string>
    <string name="edit_profile">Modifier mon profil</string>
    <string name="publication_dialog">En cours de publication</string>
    <string name="error">Une erreur est survenue</string>
    <string name="image">"Aucune image n\'a été sélectionnée"</string>
    <string name="notif_pub">Un petit tour sur FotoShare ?</string>
    <string name="comments_empty">Vous ne pouvez pas publier un commentaire vide</string>
    <string name="comment_published">Commentaire publié !</string>
    <string name="notif_comments_fragment">Votre post a reçu ce commentaire : </string>
    <string name="notif_comments">Vous venez de commenter un post</string>
    <string name="edit_profile_success">Vos modifications ont été enregistrées avec succès</string>
    <string name="save_in_progress">Enregistement en cours ...</string>
    <string name="error_registration">Erreur lors de la modification</string>
    <string name="like">"J\'aime"</string>
    <string name="subscriptions">Abonnements</string>
    <string name="person_see_story">Personne(s) ayant vu votre story</string>
    <string name="wait">Veuillez patienter ...</string>
    <string name="filled_field">Tous les champs doivent être remplis !</string>
    <string name="connection_failed">Connexion echouée</string>
    <string name="post_published">Post en cours de publication</string>
    <string name="post_created">Post crée avec succès !</string>
    <string name="post_failed">La publication de votre post a échouée, veuillez réessayer</string>
    <string name="password">Le mot de passe doit contenir au minimum 6 caractères !</string>
    <string name="register_failed">Vous ne pouvez pas vous inscrire avec cette adresse e-mail ou ce mot de passe</string>
    <string name="story_delete">Story supprimée</string>
    <string name="add_comment">Ajouter un commentaire</string>
    <string name="publish">Publier</string>
    <string name="save">Enregistrer</string>
    <string name="change_photo">Changer ma photo de profil</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="bio">Description du profil</string>
    <string name="login">Se connecter</string>
    <string name="email">Adresse e-mail</string>
    <string name="password_login">Mot de passe</string>
    <string name="not_account">"Vous n\'avez pas de compte ? Inscrivez-vous !"</string>
    <string name="have_account">Vous avez déjà un compte ? Connectez-vous !</string>
    <string name="logout">Se deconnecter</string>
    <string name="description_of_publication">Description de la publication</string>
    <string name="register">"S\'inscrire"</string>
    <string name="slogan">Partagez vos plus beaux moments sur FotoShare !</string>
    <string name="search">Recherche ...</string>
    <string name="password_confirm">Confirmer votre mot de passe</string>
    <string name="password_confirm_msg">Les mots de passe que vous avez saisis ne sont pas identiques</string>
</resources>