<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_with_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="40dp"
                android:textColor="@color/bleu"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bottom"
                android:textColorHint="@color/vert"
                android:textColor="@color/bleu"
                android:hint="@string/first_name"
                android:layout_marginTop="15dp"
                android:id="@+id/prenom"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bottom"
                android:textColorHint="@color/vert"
                android:textColor="@color/bleu"
                android:hint="@string/name"
                android:layout_marginTop="15dp"
                android:id="@+id/nom"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bottom"
                android:textColorHint="@color/vert"
                android:textColor="@color/bleu"
                android:hint="@string/email"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bottom"
                android:textColorHint="@color/vert"
                android:textColor="@color/bleu"
                android:hint="@string/password_login"
                android:layout_marginTop="15dp"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bottom"
                android:textColorHint="@color/vert"
                android:textColor="@color/bleu"
                android:hint="@string/password_confirm"
                android:layout_marginTop="15dp"
                android:id="@+id/password_confirm"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/button_arrondi"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/have_account"
                android:id="@+id/txt_login"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>